<resources>
    <!--Strings for NavigationActivity-->
    <string name="has_won">CONGRATULATIONS! \n YOU HAVE WON  THE GAME</string>
    <string name="has_lost">Sorry, You Died.</string>
    <string name="app_name">MapGame</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="default_health">Health: 100.00</string>
    <string name="default_cash">Cash: 0</string>
    <string name="default_mass">Mass: 0.00</string>
    <string name="default_location">Current Location: [0][0]</string>
    <string name="label_restart">Restart</string>
    <string name="label_winlose">You have neither won nor lost!</string>
    <string name="label_options">Options</string>
    <string name="label_wilderness">Wilderness</string>
    <string name="label_town">Town</string>
    <string name="move_north">Moved 1 unit north&#8230;</string>
    <string name="move_south">Moved 1 unit south&#8230;</string>
    <string name="move_east">Moved 1 unit east&#8230;</string>
    <string name="move_west">Moved 1 unit west&#8230;</string>
    <string name="cannot_move">Cannot move any further in this direction</string>
    <string name="town">Town</string>
    <string name="wilderness">Wilderness</string>
    <string name="location">Current Location: [%d][%d]</string>

    <!--Strings for WildernessOptionsActivity-->
    <string name="default_item_description">Item Description</string>
    <string name="default_item_value">Value: 0</string>
    <string name="default_mass_health">Mass/Health: 0.00</string>
    <string name="label_health">Health: %.2f</string>
    <string name="label_cash">Cash: %d</string>
    <string name="label_mass">Mass: %.2f</string>
    <string name="label_value">Value: %d</string>
    <string name="label_area_items">Items in Area (%d/%d)</string>
    <string name="label_no_items">No Items</string>
    <string name="label_player_items">Your Items (%d/%d)</string>
    <string name="label_prev">Prev</string>
    <string name="label_next">Next</string>
    <string name="label_take_item">Take Item</string>
    <string name="label_drop_item">Drop Item</string>
    <string name="label_return">Return</string>
    <string name="label_blank"> </string>

    <!--Strings for MarketOptionsActivity-->
    <string name="label_buy_item">Buy Item</string>
    <string name="label_sell_item">Sell Item</string>
    <string name="cannot_buy">Cannot purchase item!</string>
    <string name="marketplace">Market</string>

    <!--Strings for WinLoseActivity-->
    <string name="label_default">default</string>


</resources>
